ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                         <li><a href="#abridores">Abridores</a></li>
                         <li><a href="#brasil">Brasil</a></li>
                         <li><a href="#coloridos">Coloridos</a></li>
-                        <li><a href="#emborrachados">Emborrachados</a></li>
+                        <li><a href="#emborrachados">Borracha</a></li>
                         <li><a href="#familia">Família</a></li>
                         <li><a href="#letras-c">Letras-C</a></li>
                         <li><a href="#letras-ov">Letras-OV</a></li>
                         <li><a href="#ouro-velho">Ouro velho</a></li>
-                        <li><a href="#pet">Personagens</a></li>
-                        <li><a href="#profissoes-c">Pet</a></li>
-                        <li><a href="#profissoes-ov">Profissões-C</a></li>
-                        <li><a href="#religiosos">Profissões-OV</a></li>
-                        <li><a href="#super-herois">Religiosos</a></li>
+                        <li><a href="#personagens">Personagens</a></li>
+                        <li><a href="#pet">Pet</a></li>
+                        <li><a href="#profissoes-c">Profissões-C</a></li>
+                        <li><a href="#profissoes-ov">Profissões-OV</a></li>
+                        <li><a href="#religiosos">Religiosos</a></li>
                         <li><a href="#times">Times</a></li>
                         <li class="del"><a href="#">aa</a></li>
                      </ul>
