--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <li><a href="#coloridos">Coloridos</a></li>
                         <li><a href="#emborrachados">Borracha</a></li>
                         <li><a href="#familia">Família</a></li>
-                        <li><a href="#letras-c">Letras-C</a></li>
-                        <li><a href="#letras-ov">Letras-OV</a></li>
+                        <li><a href="#letras-c">Letras C.</a></li>
+                        <li><a href="#letras-ov">Letras O.V.</a></li>
                         <li><a href="#ouro-velho">Ouro velho</a></li>
                         <li><a href="#personagens">Personagens</a></li>
                         <li><a href="#pet">Pet</a></li>
-                        <li><a href="#profissoes-c">Profissões-C</a></li>
-                        <li><a href="#profissoes-ov">Profissões-OV</a></li>
+                        <li><a href="#profissoes-c">Profissões C.</a></li>
+                        <li><a href="#profissoes-ov">Profissões O.V.</a></li>
                         <li><a href="#religiosos">Religiosos</a></li>
                         <li><a href="#times">Times</a></li>
                         <li class="del"><a href="#">aa</a></li>
@@ -2124,7 +2124,7 @@
                <div class="icon"><img src="assets/whatsapp.png" alt="whatsapp icon"></div>
                <div class="contact-info">
                   <h1>Whatsapp</h1>
-                  <h2><a href="https://api.whatsapp.com/send?phone=5511979557102">+55 (11) 97955-7102</a></h2>
+                  <h2><a href="https://api.whatsapp.com/send?phone=5511979557102" target="_blank">+55 (11) 97955-7102</a></h2>
                </div>
             </div>
 
@@ -2132,7 +2132,7 @@
                <div class="icon"><img src="assets/email.png" alt="email icon"></div>
                <div class="contact-info">
                   <h1>Email</h1>
-                  <h2><a href="mailto:lubijux2016@gmail.com">lubijux2016@gmail.com</a></h2>
+                  <h2><a href="mailto:lubijux2016@gmail.com" target="_blank">lubijux2016@gmail.com</a></h2>
                </div>
             </div>
 
@@ -2140,7 +2140,7 @@
                <div class="icon"><img src="assets/instagram.png" alt="instagram icon"></div>
                <div class="contact-info">
                   <h1>Instagram</h1>
-                  <h2><a href="https://www.instagram.com/chaveirosbb">@chaveirosbb</a></h2>
+                  <h2><a href="https://www.instagram.com/chaveirosbb" target="_blank">@chaveirosbb</a></h2>
                </div>
             </div>
 
@@ -2164,7 +2164,7 @@
                <h4>Seções</h4>
                <ul>
                   <li><a href="#home">Início</a></li>
-                  <li><a href="#">Produtos</a></li>
+                  <li><a href="#abridores">Produtos</a></li>
                   <li><a href="#book-a">Sobre nós</a></li>
                   <li><a href="#book-c">Contato</a></li>
                </ul>
@@ -2172,19 +2172,19 @@
             <div class="footer-col">
                <h4>Mostruário</h4>
                <ul>
-                  <li><a href="#">Abridores</a></li>
-                  <li><a href="#">Emborrachados</a></li>
-                  <li><a href="#">Porta Chaves</a></li>
-                  <li><a href="#">Letras</a></li>
-                  <li><a href="#">Super Heróis</a></li>
+                  <li><a href="#abridores">Abridores</a></li>
+                  <li><a href="#emborrachados">Emborrachados</a></li>
+                  <li><a href="#profissoes-c">Profissões</a></li>
+                  <li><a href="#letras-c">Letras</a></li>
+                  <li><a href="#personagens">Personagens</a></li>
                </ul>
             </div>
             <div class="footer-col">
                <h4>Contacte nos</h4>
                <div class="social-links">
                   <a href="https://www.instagram.com/chaveirosbb" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                  <a href="https://api.whatsapp.com/send?phone=5511979557102"><i class="fa-brands fa-whatsapp"></i></a>
-                  <a href="mailto:lubijux2016@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+                  <a href="https://api.whatsapp.com/send?phone=5511979557102" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                  <a href="mailto:lubijux2016@gmail.com" target="_blank"><i class="fa-regular fa-envelope"></i></a>
                </div>
             </div>
          </div>
