--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 
 
          <div class="bloco" id="emborrachados">
-            <h1 class="section-title">Chaveiros <span>Emborrachados</span></h1>
+            <h1 class="section-title">Chaveiros de <span>Borracha</span></h1>
             
             <div class="object">
                <div class="box">
