atualização no home

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 
+   <!-- Home -->
    <section>
       <!-- Circle -->
       <div class="circle"></div>
@@ -66,16 +67,16 @@
             <p>Fabricante de chaveiros personalizados, localizados em São Paulo estamos há mais de uma década proporcionando doces lembranças para nossos clientes!</p>
          </div>
          <div class="imgbox">
-            <img src="assets/chaveiro0.png" alt="Chaveiro" class="beb">
+            <img src="assets/chaveiro0.png" alt="Chaveiro 01" class="beb">
          </div>
       </div>
       <!-- End Content -->
 
       <!-- Thumb -->
       <ul class="thumb">
-         <li><img src="assets/chaveiro0.png" alt="coffee" onclick="imgSlider('assets/chaveiro0.png');changeCircleColor('#531B7C')"></li>
-         <li><img src="assets/chaveiro1.png" alt="coffee" onclick="imgSlider('assets/chaveiro1.png');changeCircleColor('#eb7495')"></li>
-         <li><img src="assets/chaveiro0.png" alt="coffee" onclick="imgSlider('assets/chaveiro0.png');changeCircleColor('#d752b1')"></li>
+         <li><img src="assets/chaveiro0.png" alt="Chaveiro 01" onclick="imgSlider('assets/chaveiro0.png');changeCircleColor('#0a134e')"></li>
+         <li><img src="assets/chaveiro1.png" alt="Chaveiro 02" onclick="imgSlider('assets/chaveiro1.png');changeCircleColor('#461159')"></li>
+         <li><img src="assets/chaveiro2.png" alt="Chaveiro 03" onclick="imgSlider('assets/chaveiro2.png');changeCircleColor('#6D021E')"></li>
       </ul>
       <ul class="sci">
          <li><a href="https://www.instagram.com/chaveirosbb" target="_blank"><img src="assets/instagram.png" alt="facebook icon"></a></li>
@@ -84,6 +85,7 @@
       </ul>
       <!-- End Thumb-->
    </section>
+   <!-- End Home-->
 
    <!-- Main -->
    <section id="main">
