atualização de produtos

--- a/index.html
+++ b/index.html
@@ -606,6 +606,18 @@
                   <img src="assets/coloridos/colorido096.png" alt="Chaveiro">
                   <h4>Código: 096</h4>
                </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido097.png" alt="Chaveiro">
+                  <h4>Código: 097</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido098.png" alt="Chaveiro">
+                  <h4>Código: 098</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido099.png" alt="Chaveiro">
+                  <h4>Código: 099</h4>
+               </div>
             </div>
          </div>
 
@@ -1309,6 +1321,10 @@
                <div class="box">
                   <img src="assets/ouro-velho/ov052.png" alt="Chaveiro">
                   <h4>Código: 052</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/ouro-velho/ov053.png" alt="Chaveiro">
+                  <h4>Código: 053</h4>
                </div>
             </div>
          </div>
