atualização do mostruario

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </ul>
       <!-- End Thumb-->
    </section>
-   <!-- End Home-->
+   <!-- End Home -->
 
    <!-- Main -->
    <section id="main">
@@ -122,6 +122,26 @@
                <div class="box">
                   <img src="assets/abridores/abridor07.png" alt="Abridor da Brahma">
                   <h4>Código: 007</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/abridores/abridor08.png" alt="Abridor da Brahma">
+                  <h4>Código: 008</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/abridores/abridor09.png" alt="Abridor da Brahma">
+                  <h4>Código: 009</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/abridores/abridor10.png" alt="Abridor da Brahma">
+                  <h4>Código: 010</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/abridores/abridor11.png" alt="Abridor da Brahma">
+                  <h4>Código: 011</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/abridores/abridor12.png" alt="Abridor da Brahma">
+                  <h4>Código: 012</h4>
                </div>
             </div>
          </div>
@@ -170,6 +190,26 @@
                   <img src="assets/emborrachados/emborrachado010.png" alt="Chaveiro">
                   <h4>Código: 010</h4>
                </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado011.png" alt="Chaveiro">
+                  <h4>Código: 011</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado012.png" alt="Chaveiro">
+                  <h4>Código: 012</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado013.png" alt="Chaveiro">
+                  <h4>Código: 013</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado014.png" alt="Chaveiro">
+                  <h4>Código: 014</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado015.png" alt="Chaveiro">
+                  <h4>Código: 015</h4>
+               </div>
             </div>
          </div>
 
@@ -184,6 +224,14 @@
                <div class="box">
                   <img src="assets/imas/imas002.png" alt="Chaveiro">
                   <h4>Código: 002</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/imas003.png" alt="Chaveiro">
+                  <h4>Código: 003</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/imas004.png" alt="Chaveiro">
+                  <h4>Código: 004</h4>
                </div>
             </div>
          </div>
@@ -710,6 +758,38 @@
                <div class="box">
                   <img src="assets/coloridos/colorido107.png" alt="Chaveiro">
                   <h4>Código: 107</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido108.png" alt="Chaveiro">
+                  <h4>Código: 108</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido109.png" alt="Chaveiro">
+                  <h4>Código: 109</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido110.png" alt="Chaveiro">
+                  <h4>Código: 110</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido111.png" alt="Chaveiro">
+                  <h4>Código: 111</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido112.png" alt="Chaveiro">
+                  <h4>Código: 112</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido113.png" alt="Chaveiro">
+                  <h4>Código: 113</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido114.png" alt="Chaveiro">
+                  <h4>Código: 114</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/coloridos/colorido115.png" alt="Chaveiro">
+                  <h4>Código: 115</h4>
                </div>
             </div>
          </div>
