--- a/index.html
+++ b/index.html
@@ -186,6 +186,22 @@
                   <img src="assets/emborrachados/emborrachado009.png" alt="Chaveiro">
                   <h4>Código: 009</h4>
                </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado010.png" alt="Chaveiro">
+                  <h4>Código: 010</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado011.png" alt="Chaveiro">
+                  <h4>Código: 011</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado012.png" alt="Chaveiro">
+                  <h4>Código: 012</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado013.png" alt="Chaveiro">
+                  <h4>Código: 013</h4>
+               </div>
             </div>
          </div>
 
@@ -193,7 +209,22 @@
             <h1 class="section-title"><span>IMÃS</span></h1>
             
             <div class="object">
-               
+               <div class="box">
+                  <img src="assets/imas/ima001.png" alt="Chaveiro">
+                  <h4>Código: 001</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima002.png" alt="Chaveiro">
+                  <h4>Código: 002</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima003.png" alt="Chaveiro">
+                  <h4>Código: 003</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima004.png" alt="Chaveiro">
+                  <h4>Código: 004</h4>
+               </div>
             </div>
          </div>
 
