adição de novos modelos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
    <section>
       <!-- Circle -->
       <div class="circle"></div>
-      <!-- End Circle -->
 
       <!-- Header -->
       <header id="home">
@@ -59,7 +58,6 @@
                <li><a href="#book-c" class="link">Contato</a></li>
             </ul>
       </header>
-      <!-- End Header -->
 
       <!-- Content -->
       <div class="content">
@@ -71,7 +69,6 @@
             <img src="assets/chaveiro0.png" alt="Chaveiro 01" class="beb">
          </div>
       </div>
-      <!-- End Content -->
 
       <!-- Thumb -->
       <ul class="thumb">
@@ -84,9 +81,7 @@
          <li><a href="https://api.whatsapp.com/send?phone=5511979557102" target="_blank"><img src="assets/whatsapp.png" alt="facebook icon"></a></li>
          <li><a href="mailto:lubijux2016@gmail.com"><img src="assets/email.png" alt="facebook icon"></a></li>
       </ul>
-      <!-- End Thumb-->
    </section>
-   <!-- End Home -->
 
    <!-- Main -->
    <section id="main">
@@ -202,6 +197,22 @@
                   <img src="assets/emborrachados/emborrachado013.png" alt="Chaveiro">
                   <h4>Código: 013</h4>
                </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado014.png" alt="Chaveiro">
+                  <h4>Código: 014</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado015.png" alt="Chaveiro">
+                  <h4>Código: 015</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado016.png" alt="Chaveiro">
+                  <h4>Código: 016</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado017.png" alt="Chaveiro">
+                  <h4>Código: 017</h4>
+               </div>
             </div>
          </div>
 
@@ -224,6 +235,18 @@
                <div class="box">
                   <img src="assets/imas/ima004.png" alt="Chaveiro">
                   <h4>Código: 004</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima005.png" alt="Chaveiro">
+                  <h4>Código: 005</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima006.png" alt="Chaveiro">
+                  <h4>Código: 006</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima007.png" alt="Chaveiro">
+                  <h4>Código: 007</h4>
                </div>
             </div>
          </div>
@@ -2285,7 +2308,6 @@
          </div>
       </div>
    </section>   
-   <!-- End Main-->
 
    <!-- About us -->
    <section id="about">
@@ -2302,7 +2324,6 @@
          </div>
       </div>
    </section>
-   <!-- End About us -->
 
    <!-- Contact -->
    <section id="contact">
@@ -2339,7 +2360,6 @@
          </div>
       </div>
    </section>
-   <!-- End Contact -->
 
    <!-- Footer -->
    <footer id="footer">
@@ -2382,10 +2402,8 @@
          </div>
       </div>
    </footer>
-   <!-- End Footer -->
 
    <!-- Script -->
    <script src="script.js"></script>
-   <!-- End Script -->
 </body>
 </html>
