atualização no mostruario

--- a/index.html
+++ b/index.html
@@ -213,6 +213,10 @@
                   <img src="assets/emborrachados/emborrachado017.png" alt="Chaveiro">
                   <h4>Código: 017</h4>
                </div>
+               <div class="box">
+                  <img src="assets/emborrachados/emborrachado018.png" alt="Chaveiro">
+                  <h4>Código: 018</h4>
+               </div>
             </div>
          </div>
 
@@ -247,6 +251,10 @@
                <div class="box">
                   <img src="assets/imas/ima007.png" alt="Chaveiro">
                   <h4>Código: 007</h4>
+               </div>
+               <div class="box">
+                  <img src="assets/imas/ima008.png" alt="Chaveiro">
+                  <h4>Código: 008</h4>
                </div>
             </div>
          </div>
